# rtm

./: .gitignore  CONTRIBUTING.md  contentlayer.config.ts  import-manual.sh  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.converted/analog-four-mkii/: a4.md  a4_meta.json
.converted/analog-rytm-mkii/: analog-rytm-mkii.md
.cursor/scope-rule/: RULE.md  implementation-rules.md
.github/workflows/: pages.yml
.storybook/: cursor-wrapper.sh  preview-head.html  preview.ts  setup-cursor.sh
app/: globals.css  layout.tsx  page.tsx
components/: Header.stories.tsx  Header.tsx  HeaderContext.tsx  MachineMetadata.tsx  StickyTitle.stories.tsx  StickyTitle.tsx  TableOfContents.stories.tsx  TableOfContents.tsx  Tag.tsx  ThemeToggle.stories.tsx  ThemeToggle.tsx
docs/: import-checklist.md  manual-import-reference.md
hooks/: useDebounce.ts  useKeyboardShortcut.ts
lib/: basePath.ts  machines.ts  utils.ts
scripts/: add-toc-links.py  convert-manual-conventions.py  fix-image-paths.py  fix-mdx-compatibility.py  fix-tables.py  import-svg-diagram.py
tools/oledvec/engine-python/: analysis_results.json  analyze_patterns.py  optimize_svgs.py  pyproject.toml  requirements.txt
tools/oledvec/engine-python/oledvec/: __init__.py  __main__.py  detect.py  export_svg.py  process.py  server.py  shapes.py  state.py
tools/oledvec/engine-python/oledvec.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tools/oledvec/engine-python/tests/: test_pipeline.py
tools/oledvec/engine-python/tests/fixtures/: README.md
types/: pagefind.ts
(+69 files in other folders)
